# weather-mlops

./: .dvcignore  .gitignore  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml  retrain.yml
pipelines/: ingest.py  prepare.py
services/api/: Dockerfile  pyproject.toml
services/api/app/: main.py  model_loader.py  schemas.py
services/drift_monitor/: Dockerfile  pyproject.toml
services/drift_monitor/src/: drift_report.py  main.py  simulator.py
services/trainer/: Dockerfile  pyproject.toml
services/trainer/src/: data_loader.py  registry.py  train.py
tests/: conftest.py
tests/api/: test_health.py  test_predict.py
tests/drift_monitor/: test_drift_report.py  test_simulator.py
tests/trainer/: test_data_loader.py
