[project]
name = "weather-mlops-pipelines"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.25",
    "google-cloud-bigquery-storage>=2.27",
    "db-dtypes>=1.3",
    "pandas>=2.2",
    "numpy>=2.0",
    "pyarrow>=17",
    "dvc>=3.55",
    "python-dotenv>=1.0",
    "mlflow>=2.18",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "evidently>=0.7",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"