[project]
name = "era5-trainer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mlflow>=2.18",
    "xgboost>=2.1",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "google-cloud-bigquery>=3.25",
    "pyarrow>=17",
    "dvc>=3.55",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
